# WikINT

./: .dockerignore  .env.example  .gitignore  DOCS.md  api_search.py  compose.override.yaml  compose.prod.yaml  compose.yaml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  run.sh  test_libreoffice.py  test_presign.py  test_s3.py
api/: .coverage  .dockerignore  Dockerfile  alembic.ini  check.py  pyproject.toml  start.sh  test_pydantic.py  test_redis.py  test_sse_redis.py  wait_for_db.py  worker-start.sh
api/app/: cli.py  config.py  main.py
api/app/core/: avatar_processor.py  cas.py  constants.py  database.py  email.py  exceptions.py  file_security.py  limiter.py  meilisearch.py  metrics.py  mimetypes.py  minio.py  polyglot.py  processing.py  redis.py  sandbox.py  sanitization.py  scanner.py  security.py  sse.py  storage.py  telemetry.py  typing_ext.py  upload_errors.py  url_validation.py
api/app/core/file_security/: __init__.py  _audio_video.py  _concurrency.py  _image.py  _office.py  _pdf.py  _svg.py  _zip.py  compress.py  strip.py
api/app/core/lua/: cas_decr.lua  cas_incr.lua
api/app/dependencies/: auth.py  pagination.py  rate_limit.py
api/app/migrations/: env.py
api/app/migrations/versions/: 001_initial.py  002_batch_pr_upgrade.py  003_pipeline_resilience.py  004_optimistic_locking.py  005_cas_sha256_column.py  016ff5f329ae_fix_summary_types_containing_null.py  037cdf394b1d_add_allow_all_domains_to_auth_configs.py  0848234829d9_add_auto_approve_to_user.py  0bb37078dd90_add_view_counters_to_material.py  (+34 more)
api/app/models/: __init__.py  annotation.py  auth_config.py  base.py  comment.py  dead_letter.py  directory.py  download_audit.py  featured.py  flag.py  material.py  notification.py  pull_request.py  security.py  tag.py  upload.py  user.py  view_history.py
api/app/routers/: admin.py  admin_backup.py  admin_storage.py  annotations.py  auth.py  browse.py  comments.py  directories.py  flags.py  home.py  materials.py  moderator.py  notifications.py  onlyoffice.py  pr_comments.py  pull_requests.py  search.py  tus.py  upload.py  users.py
api/app/schemas/: annotation.py  auth.py  comment.py  common.py  directory.py  featured.py  flag.py  home.py  material.py  notification.py  pull_request.py  user.py
api/app/services/: annotation.py  audit.py  auth.py  backup.py  comment.py  directory.py  email.py  flag.py  material.py  notification.py  pr.py  search.py  tag.py  user.py
api/app/workers/: check_bazaar.py  cleanup_orphans.py  cleanup_uploads.py  gdpr_cleanup.py  index_content.py  minio_ops.py  process_upload.py  reconcile_multipart.py  retroactive_quarantine.py  settings.py  storage_ops.py  view_reset.py  webhook_dispatch.py  year_rollover.py
api/scratch/: check_activity.py
api/scripts/: reindex.py
api/tests/: __init__.py  conftest.py  test_admin_backup.py  test_admin_config_storage_files.py  test_admin_roles.py  test_annotations.py  test_async_upload.py  test_audit_fixes.py  test_audit_fixes_v2.py  test_audit_hardening.py  test_audit_issues.py  test_audit_review.py  test_auth.py  test_auth_config.py  test_auth_google.py  test_avatar_upload.py  test_batch_indexer.py  test_bazaar_async.py  test_browse.py  test_cas_security.py  test_comments.py  test_concurrency_cap.py  test_directories.py  test_email_ip_override.py  test_file_security_paths.py  test_file_security_v2.py  test_hard_delete.py  test_input_validation.py  test_magic_links.py  test_material_text_content.py  test_materials.py  test_meili_sync_comprehensive.py  test_metrics_and_webhooks.py  test_mimetypes.py  test_multipart_reconcile.py  test_notifications.py  test_phase4_ux.py  test_phase5_architecture.py  test_phase6_optimizations.py  test_phase7.py  (+29 more)
api/tests/core/: test_sandbox.py
api/yara_rules/: document_advanced.yar  document_exploits.yar  eicar.yar  malware_common.yar
docs/: README.md
(+296 files in other folders)
