[project]
name = "wikint-api"
version = "0.1.0"
description = "WikINT API — Course materials platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis[hiredis]>=5.0",
    "arq>=0.26",
    "aioboto3>=13.0",
    "aioclamd>=0.1",
    "meilisearch-python-sdk>=3.0",
    "aiosmtplib>=3.0",
    "pyjwt[crypto]>=2.9",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0",
    "slowapi>=0.1.9",
    "typer>=0.15",
    "httpx>=0.28",
    "sqladmin>=0.23",
    "gunicorn>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "factory-boy>=3.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestRemovedIn9Warning",
    "ignore::DeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest-cov>=7.0.0",
]
