[project]
name = "wikint-api"
version = "0.1.0"
description = "WikINT API — Course materials platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis[hiredis]>=5.0",
    "arq>=0.26",
    "aioboto3>=13.0",
    "meilisearch-python-sdk>=3.0",
    "aiosmtplib>=3.0",
    "pyjwt[crypto]>=2.9",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0",
    "slowapi>=0.1.9",
    "typer>=0.15",
    "httpx>=0.28",
    "sqladmin>=0.23",
    "gunicorn>=25.1.0",
    "Pillow>=11.0.0",
    "pikepdf>=9.0.0",
    "mutagen>=1.47",
    "yara-python>=4.5",
    "scour>=0.38",
    "defusedxml>=0.7",
    "oletools>=0.60",
    "prometheus-client>=0.21",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-api>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "factory-boy>=3.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/core/typing_ext.py" = ["N803"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestRemovedIn9Warning",
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mypy>=1.19.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "types-defusedxml>=0.7.0",
    "types-aioboto3>=13.0.0",
    "types-redis>=4.6.0",
    "types-aiobotocore-s3>=3.3.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_unused_ignores = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
exclude = ["tests/", "app/migrations/"]

